initial edited cause i messed up

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <hr>
     <h2>John Miles</h2>
     <hr>
-    <p>H<sup>ello</sup> <strong>W<sub>orld!</sub>!</strong><p/>
+    <p>H<sup>ello</sup> <strong>W<sub>orld!</sub>!</strong></p>
     <hr>
-    <p>Hello world this is my<ins>supper</ins> <del>bestest</del> greatest webpage <mark>ever</mark</p>
+    <p>Hello world this is my<ins>supper</ins> <del>bestest</del> greatest webpage <mark>ever</mark></p>
     <hr>
 </body>
 </html>
