--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>John Miles</title>
+    <!// then you'll type some stuff then its --->
 </head>
 <body>
     <h1>MY <em>FIRST</em> WEBPAGE</h1>
