adding a picture and link

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <h1>MY <em>FIRST</em> WEBPAGE</h1>
     <hr>
     <h2>John Miles</h2>
+    <img src ="starwrs.png" alt="star wars logo"width=50% height=50%>
     <hr>
     <p>H<sup>ello</sup> <strong>W<sub>orld!</sub>!</strong></p>
-    <hr>
+    <br />
+    <a href="www.starwars.com">Star Wars</a>
     <p>Hello world this is my <ins>supper</ins> <del>bestest</del> greatest webpage <mark>ever</mark></p>
     <hr>
 </body>
