--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <hr>
     <p>H<sup>ello</sup> <strong>W<sub>orld!</sub>!</strong></p>
     <br />
-    <a href="www.starwars.com">Star Wars</a>
+    <a href="www.starwars.com"><img src="https://jlaw21.github.io/Resources/mario.png"></a>
     <p>Hello world this is my <ins>supper</ins> <del>bestest</del> greatest webpage <mark>ever</mark></p>
     <hr>
+    <a href="littlegreenguy" download title="Download Yoda">Click Here</a>
+    <p>The intention of this website is for educational purposes and used solely for learning.</p>
 </body>
 </html>
