--- a/index.html
+++ b/index.html
@@ -16,6 +16,32 @@
     <p>Hello world this is my <ins>supper</ins> <del>bestest</del> greatest webpage <mark>ever</mark></p>
     <hr>
     <a href="littlegreenguy" download title="Download Yoda">Click Here</a>
+    <ul> MY FAVORITE STUFFS
+        <li>Movies</li>
+           <ol>
+                <li>Star Wars</li>
+                <li>Lord of the Rings</li>
+                <li>The Hobbit</li>
+           </ol>
+        <li>Food</li>
+            <ol>
+                <li>Pumpkin pie</li>
+                <li>Steak</li>
+                <li>Mac n Cheese Casserole</li>
+            </ol>
+        <li>Games</li>
+            <ol>
+                <li>Ark Survival Evolved</li>
+                <li>Fallout 4</li>
+                <li>Destiny 2</li>
+                <li>Borderlands Series</li>
+                <li>Empyrion Galactic Survival</li>
+                <li>Stellaris</li>
+                <li>Star Wars Empire At Wars</li>
+                <li> Lord of the Rings Online</li>
+
+            </ol>
+    </ul>
     <p>The intention of this website is for educational purposes and used solely for learning.</p>
 </body>
 </html>
