--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
     <head>
         <title>John Miles</title>
     </head>
-   <style>table, tr, th,td{
+   <style>table,tr,th,td{
         border:2px black solid;
    }
     </style>
     <body> 
-         
-        <table>
+        <table width="1585">
             <tr>
-                <h1>John Miles</h1>
+                <th>
+                    <h1>John Miles</h1>
+                </th>
             </tr>
-        </table>
-        {
+            <tr>
+                <th>
+                    <h2>About Me</h2>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                <img src="winterpercussionpicture.jpg" width = 21% height = 30%
+                <br>
+                <p>Hey world. I'm John. Yes, John, that weird kid in your school who talks about random stuff and distracts your teachers. But, thats not all I am. I'm much more interesting than that.</p>
+            </th>
+        </tr>
+        </table>   
     </body>
 </html>    
