--- a/index.html
+++ b/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>John Miles</title>
-    </head>
-   <style>table,tr,th,td{
-        border:2px black solid;
-   }
-    </style>
-    <body> 
-        <table width="1585">
-            <tr>
-                <th>
-                    <h1>John Miles</h1>
-                </th>
-            </tr>
-            <tr>
-                <th>
-                    <h2>About Me</h2>
-            </th>
-        </tr>
-        <tr>
-            <th>
-                <img src="winterpercussionpicture.jpg" width = 21% height = 30%
-                <br>
-                <p>Hey world. I'm John. Yes, John, that weird kid in your school who talks about random stuff and distracts your teachers. But, thats not all I am. I'm much more interesting than that.</p>
-            </th>
-        </tr>
-        </table>   
-    </body>
-</html>    
+   <head>
+       <title>John Miles</title>
+   </head>
+  <style>table,tr,th,td{
+       border:2px black solid;
+  }
+   </style>
+   <body>
+       <table width="100%">
+           <tr>
+               <th colspan=3>
+                   <h1>John Miles</h1>
+               </th>
+           </tr>
+           <tr>
+               <th colspan=3>
+                   <h2>About Me</h2>
+               </th>
+           </tr>
+           <tr>
+               <th colspan=3>
+                   <img src="winterpercussionpicture.jpg" width = 25% height = 25%
+                   <br>
+                   <p>Hey world. I'm John. Yes, John, that weird kid in your school who talks about random stuff and distracts your teachers. But, thats not all I am. I'm much more interesting than that.</p>
+               </th>
+           </tr>
+           <tr>
+               <th>Favorite Games</th>
+               <th>Favorite Movies/TV Shows</th>
+               <th>Favorite Books</th>
+           </tr>
+           <tr>
+               <th>
+                   <ol>
+                       <li>Star Wars Empire at War FOC</li>
+                       <li>Ark Survival Evolved</li>
+                       <li>Stellaris</li>
+                       <li>Sins of a Solar Empire: Rebellion</li>
+                       <li>Destiny 2</li>
+                   </ol>
+               </th>
+               <th>
+                   <ol>
+                       <li>Star Wars</li>
+                       <li>Lord of the Rings</li>
+                       <li>The Hobbit</li>
+                       <li>The Green Arrow</li>
+                       <li>Daredevil</li>
+                   </ol>
+               </th>
+               <th>
+                   <ol>
+                       <li>Lord of the Rings</li>
+                       <li>Star Wars: Thrawn</li>
+                       <li>Harry Potter</li>
+                       <li>The Hobbit></li>
+                       <li>The Silmarillion</li>
+                   </ol>
+               </th>
+           </tr>
+       </table>  
+   </body>
+</html>
